# lilgpt

./: README.md  pyproject.toml  tokenizer.py  trainer.py
training/: poe.txt
